# csc-data-synthesizer

./: .gitignore  .gitpod.Dockerfile  .gitpod.yml  README.md  pyproject.toml  setup.py
cscsynth/: __init__.py  census.py  childrengenerator.py  csv.py  generators.py  types.py  xml.py
examples/: manual_903_csv.py  manual_903_xml.py  simple_generation.py  simple_header.py
tests/: test_generators.py  test_xml.py
tests/data/: CLA.xsd  generated_903.xml
