[tool.poetry]
name = "cscsynth"
version = "0.1.0"
description = "Shared module for generating children services data"
authors = ["Mark Waddoups <mark.waddoups@socialfinance.org.uk>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.7.1,<3.10"
numpy = "^1.21.2"
scipy = "^1.7.1"
pandas = "^1.3.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
